--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>David Chu's China Bistro</title>
-    <link rel="stylesheet" href="css/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
@@ -27,7 +27,7 @@
             </div>
 
             <div id="collapsable-nav" class="collapse navbar-collapse">
-                <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+                <ul id="nav-list" class="nav navbar-nav navbar-right">
                     <li>
                         <p class="text-center"> Chicken </p>
                     </li>
@@ -148,8 +148,8 @@
 </div><!-- End of #main-content -->
 
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="css/node_modules/bootstrap/dist/js/bootstrap.js"></script>
-<script src="css/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="css/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="css/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
